Tradition_EC2/vpc.tf
resource "aws_vpc" "ec2_vpc" {
  cidr_block = "10.0.0.0/16"


  tags = {
    Name = "ec2"
  }
}
